--- a/DistributionOfWork/.vscode/launch.json
+++ b/DistributionOfWork/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "C++ Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/synchronousShoping.exe",
+            "program": "${workspaceRoot}/main.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
